SPAR nD with correct arXiv

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -120,11 +120,11 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 
 \section{Other academic activities}
 
-\cvitem{Recent talks and seminars}{Oceanographic extremes (Metoffice, Exeter, 2022; Wales Mathematics Colloquium, Gregynnog, 2022; Royal Statistical Society Conference, 2021; ISSC-ITTC, 2021; Waves SIG, 2020; OMAE Conference, 2020; Lancaster extremes workshop, 2019; Marine Centre Wales, Bangor, 2018; Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Remote sensing (Wales Mathematics Colloquium, Gregynnog, 2022; Data-centric engineering, 2021); Emerging themes in data science (Emerging Applications Section, RSS, London, 2017); Spatial extremes (Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Real-time data and applications (StatScale workshop, Lancaster, 2017).} 
+\cvitem{Recent talks and seminars}{Oceanographic extremes (Norwegian Metoffice and DNV, 2024; RSS conference, 2023; UK Metoffice, 2022; Royal Statistical Society Conference, 2021; ISSC-ITTC, 2021; Waves SIG, 2020; OMAE Conference, 2020; Lancaster extremes workshop, 2019; Marine Centre Wales, Bangor, 2018; Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Remote sensing (Wales Mathematics Colloquium, Gregynnog, 2022; Data-centric engineering, 2021); Emerging themes in data science (Emerging Applications Section, RSS, London, 2017); Spatial extremes (Extreme Value Analysis \& Natural Hazards, Southampton, 2017); Real-time data and applications (StatScale workshop, Lancaster, 2017).} 
 
 \cvitem{Academic leadership}{Member of REF 2021 Mathematics Sub-panel (2018-21); Advisory Board for Mathematical Sciences (Durham, 2016-2017); StatScale External Advisory Board (Mathematics and Statistics, Lancaster, 2016-2018); STOR-i External Advisory Board (Mathematics and Statistics, Lancaster, 2009-2018).}
 
-\cvitem{External examination of PhDs}{Mathematical Sciences, (Durham, 2020); Department of Civil Engineering and Environmental Science (Imperial College, 2017); School of Chemical Engineering and Advanced Materials, Newcastle, 2016); Department of Mathematical Sciences (Norwegian University of Science and Technology, Trondheim, 2015); Institute for Transport Studies (Leeds, 2011); Centre for Process Analytics and Control Technology (Newcastle, 2003). Also acted as Internal Examiner for Lancaster PhDs since 2018 on numerous occasions.}
+\cvitem{External examination of PhDs}{Mathematical Sciences (Oslo, 2024); Mathematical Sciences (Durham, 2020); Civil Engineering and Environmental Science (Imperial College, 2017); Chemical Engineering and Advanced Materials, Newcastle, 2016); Mathematical Sciences (Trondheim, 2015); Transport Studies (Leeds, 2011); Process Analytics and Control Technology (Newcastle, 2003). Also acted as Internal Examiner for Lancaster PhDs since 2018 on numerous occasions.}
 
 %\section{Publications}
 %
@@ -142,7 +142,7 @@ Publications are sorted first by year (in reverse), then by author and finally i
 \setlength{\parskip}{0.2em}
 \vspace{5pt}
 
-2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. Preprint to be submitted to the 2025 OMAE conference. arXiv submitted 20.12.24.
+2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. Preprint to be submitted to the 2025 OMAE conference. arXiv:2412.15808.
 
 2024: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
