Added RossT paper 2017 to CV; resubmitted version of Callum climate paper

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -270,6 +270,8 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2017: E. Ross, D. Randell, K. Ewans, G. Feld and \textbf{P. Jonathan}. Efficient estimation of return value distributions from non-stationary marginal extreme value models using Bayesian inference. Ocean Eng. 142:315--328.
 
+2017: R. Towe, E. Eastoe, J. A. Tawn and \textbf{P. Jonathan}. Statistical downscaling for future extreme wave heights in the North Sea. Ann. Appl. Stat. 11: 2375-2403.
+
 2016: M. J. Jones, D. Randell, K. Ewans, and \textbf{P. Jonathan}. Statistics of extreme ocean environments: non-stationary inference for directionality and other covariate effects. Ocean Eng. 119:30--46.
 
 2016: M. Kereszturi, J. Tawn, and \textbf{P. Jonathan}. Assessing extremal dependence of North Sea storm severity. Ocean Eng. 118:242--259.
