Added arXiv for Callum's climate paper

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -144,17 +144,17 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. Preprint to be submitted to the 2025 OMAE conference. arXiv:2412.15808.
 
-2024: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2501.11650.
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
 
 2024: C. Murphy, R. Towe and \textbf{P. Jonathan}. Calibration of medium-range metocean forecasts for the North Sea. (Submitted to Applied Ocean Research in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
-2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).  arXiv:2401.07259.
+2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)  arXiv:2401.07259.
 
-2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to the Annals of Applied Statistics in October 2024, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2408.01298.
+2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to the Annals of Applied Statistics in October 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2408.01298.
 
-2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan).
+2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
