--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -34,7 +34,7 @@
 
 \setlength{\parskip}{0.5em}
 
-Philip Jonathan is a statistical modeller, Chief Statistician at Shell and Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK (both on a part-time basis from April 2023). His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 30 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems. Illustrative references include:
+Philip Jonathan is a statistical modeller, Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK on a part-time basis. His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 35 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems. Illustrative references include:
 
 \setlength{\parskip}{0.2em}
 
@@ -138,33 +138,34 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 %\bibliography{PhilipJonathan}                        % 'publications' is the name of a BibTeX file
 
 \section{Publications}
-Publications are sorted first by year (in reverse), then by author and finally if necessary by title. Citation H-index (Google Scholar, accessed December 2022) is 33 (and 24 since 2017). Total number of citations is 3739 (1910 since 2017). 
-\setlength{\parskip}{0.2em}
+Publications are sorted first by year (in reverse), then by author and finally if necessary by title. 
 \vspace{5pt}
 
-2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. Preprint to be submitted to the 2025 OMAE conference. arXiv:2412.15808.
+2025: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2501.11650.
 
-2024: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2501.11650.
+2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. (Preprint to be submitted to the 2025 OMAE conference, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2412.15808.
+
+2025: C. Murphy, R. Towe and \textbf{P. Jonathan}. Calibration of medium-range metocean forecasts for the North Sea. (Submitted to Applied Ocean Research in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+
+2025: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to the Annals of Applied Statistics in October 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2408.01298.
+
+2025: E. J. Watts, R. Rees, T. M. Gernon, \textbf{P. Jonathan}, D. Keir, R. N. Taylor, M. Siegburg, E. L. Chambers, C. Pagli, M. J. Cooper, A. Michalik, J. A. Milton and T. K Hincks. Afar triple junction fed by single, asymmetric mantle upwelling. (Submitted to Nature Geoscience in April 2024).
+
+2025: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. Data-Centric Engineering 6:e1 https://doi.org/10.1017/dce.2024.23.
 
 2024: E. B. L. Mackay, C. J. R. Murphy-Barltrop and \textbf{P. Jonathan}. The SPAR model: a new paradigm for multivariate extremes. Application to joint distributions of metocean variables. J. Offshore Mech. Arct. Eng. 147:011205.
 
-2024: C. Murphy, R. Towe and \textbf{P. Jonathan}. Calibration of medium-range metocean forecasts for the North Sea. (Submitted to Applied Ocean Research in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
-
-2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. (Accepted by Extremes in August 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)  arXiv:2401.07259.
-
-2024: T. Newman, C. Nemeth, M. J. Jones and \textbf{P. Jonathan}. Probabilistic Inversion Modeling of Gas Emissions: A Gradient-Based MCMC Estimation of Gaussian Plume Parameters. (Submitted to the Annals of Applied Statistics in October 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2408.01298.
-
-2024: R. Paleja, O. Ekhorutomwen, M. Jones, John Ayoola, R. Pitchumani and \textbf{P. Jonathan}. Reducing the CO$_2$ footprint at an LNG asset with replicate trains using operational data-driven analysis. A case study on end flash vessels. (Accepted by Data-Centric Engineering in June 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. Inference for multivariate extremes via a semi-parametric angular-radial model. Extremes https://doi.org/10.1007/s10687-024-00492-2.  arXiv:2401.07259.
 
 2024: K. Sando, R. Wada, J. Rohmer and \textbf{P. Jonathan}. Multivariate spatial and spatio-temporal models for extreme tropical cyclone seas. Ocean Eng. 309:118365. 
 
 2024: M. Speers, D. Randell, J. A. Tawn and \textbf{P. Jonathan}. Estimating metocean environments associated with extreme structural response to demonstrate the dangers of environmental contour methods. Ocean Eng. 311:118754. arXiv:2404.16775.
 
-2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. (Accepted by Ocean Engineering in September 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.)
+2024: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. Environmetrics. 35:e2834. arXiv:2302.14501.
+
+2024: S. Tendijck, D. Randell, G. Feld and \textbf{P. Jonathan}. Practical non-stationary extreme value analysis of peaks over threshold using the generalised Pareto distribution: estimating uncertainties in return values. Ocean Eng. 312:119247.
 
 2024: R. Towe, E. Ross, D. Randell and \textbf{P. Jonathan}. covXtreme : MATLAB software for non-stationary penalised piecewise constant marginal and conditional extreme value models. Environ. Model. Softw. 177:106035. arXiv:2309:17295.
-
-2024: E. J. Watts, R. Rees, T. M. Gernon, \textbf{P. Jonathan}, D. Keir, R. N. Taylor, M. Siegburg, E. L. Chambers, C. Pagli, M. J. Cooper, A. Michalik, J. A. Milton and T. K Hincks. Afar triple junction fed by single, asymmetric mantle upwelling. (Submitted to Nature Geoscience in April 2024).
 
 2023:  A.M. Barlow, E. Mackay, E. Eastoe and \textbf{P. Jonathan}. A penalised piecewise-linear model for non-stationary extreme value analysis of peaks over threshold. Ocean Eng. 267:113265. arXiv:2201.03915.
 
@@ -179,8 +180,6 @@ Publications are sorted first by year (in reverse), then by author and finally i
 2023: C. Roberts, R. Ijzermans, D. Randell, M.Jones, \textbf{P. Jonathan}, K. Mandel, B. Hirst and O. Shorttle. Avoiding methane emission rate underestimates when using the divergence method. Environ. Res. Lett. 18:114033. arXiv:2304.10303.
 
 2023: S.Tendijck, E. Eastoe, J. Tawn, D. Randell and \textbf{P. Jonathan}. Modelling the extremes of bivariate mixture distributions with application to oceanographic data. J. Amer. Statist. Assoc. 118:1373--1384.
-
-2023: S. Tendijck, \textbf{P. Jonathan}, D. Randell and J. A. Tawn. Temporal evolution of the extreme excursions of multivariate kth order Markov processes with application to oceanographic data. (Accepted by Environmetrics, November 2023, preprint at www.lancs.ac.uk/$\sim$jonathan). arXiv:2302.14501.
 
 2023: S. Tendijck, J. A. Tawn and \textbf{P. Jonathan}. Extremal characteristics of conditional models. Extremes 26:139–156. arXiv:2202.11673.
 
@@ -449,16 +448,20 @@ Publications are sorted first by year (in reverse), then by author and finally i
 
 \setlength{\parskip}{0.5em}
 
-J. P. Grainger, A. Sykulski a \textbf{P. Jonathan}. Amcangyfrif sbectrwm amleddol tonnau disgyrchiol arwyneb y m\^or o amgylch arfordir Cymru.
+With Callum Leach et al., evidence for non-linear changes in future extreme temperatures from CMIP6 climate models
 
-C. J. R. Murphy-Barltrop, E. Mackay and \textbf{P. Jonathan}. A novel inference framework for the SPAR model.
+With Ed Mackay et al., a mathematical overview of extreme value modelling in ocean engineering.
 
-Y. Wu, J. A. Tawn and \textbf{P. Jonathan}. Characterising large-scale spatial extremal dependence of storm environments in the North Sea.
+With Thomas Newman et al., machine learning and particle filtering for atmospheric inversion with obstactles.
+
+With Erik Vanem et al., a review of extreme value methods of ocean engineering applications.
+
+With Yanyun Wu et al., on characterising large-scale spatial extremal dependence of storm environments in the North Sea.
 
 \setlength{\parskip}{0em}
 
 \section{Yn y Gymraeg}
-Modelydd ystadegol yng nghwmni Shell ac Adran Fathemateg ac Ystagedd Prifysgol Caerhirfryn yw Philip Jonathan. Mae'n astudio sistemau amgylcheddol yn cynnwys eithafon stormydd morol a gwasgariad nwyon atmosfferig gan ddefnyddio dulliau gwerthoedd eithafol a gofodol-amserol Bayesaidd. Am rhagor o wybodaeth, ewch i \texttt{www.lancs.ac.uk/$\sim$jonathan}.
+Modelydd ystadegol yn Ysgol Gwyddorau Mathemategol Prifysgol Caerhirfryn yw Philip Jonathan. Mae'n astudio sistemau amgylcheddol yn cynnwys eithafon stormydd morol a gwasgariad nwyon atmosfferig gan ddefnyddio dulliau gwerthoedd eithafol a gofodol-amserol Bayesaidd. Am rhagor o wybodaeth, ewch i \texttt{www.lancs.ac.uk/$\sim$jonathan}.
 
 \clearpage
 \end{document}
