Update JBA files, added Consultancy Services to CV

--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -126,16 +126,11 @@ E. Y. Kamber, \textbf{P. Jonathan}, A. G. Brenton, and J. H. Beynon. Single-elec
 
 \cvitem{External examination of PhDs}{Mathematical Sciences (Oslo, 2024); Mathematical Sciences (Durham, 2020); Civil Engineering and Environmental Science (Imperial College, 2017); Chemical Engineering and Advanced Materials, Newcastle, 2016); Mathematical Sciences (Trondheim, 2015); Transport Studies (Leeds, 2011); Process Analytics and Control Technology (Newcastle, 2003). Also acted as Internal Examiner for Lancaster PhDs since 2018 on numerous occasions.}
 
-%\section{Publications}
-%
-%Publications listed at \texttt{www.mendeley.com/profiles/philip-jonathan3/publications}. \\
-%Recent papers at \texttt{www.lancaster.ac.uk/$\sim$jonathan}.
-%
-%\end{document}
+\section{Consultancy activities}
 
-%\nocite{*}
-%\bibliographystyle{plain}
-%\bibliography{PhilipJonathan}                        % 'publications' is the name of a BibTeX file
+Since 2024 I have undertaken a limited amount of consultancy work.
+
+\cvitem{JBA / Environment Agency}{On behalf of Lancaster University, support for review and update of flood and coastal defence Joint Probability Guidance (2024-).} 
 
 \section{Publications}
 Publications are sorted first by year (in reverse), then by author and finally if necessary by title. 
