--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -34,7 +34,7 @@
 
 \setlength{\parskip}{0.5em}
 
-Philip Jonathan is a statistical modeller, Chair of Environmental Statistics and Data Science in the Department of Mathematics and Statistics at Lancaster University, UK on a part-time basis. His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 35 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, and ancient writing systems. Illustrative references include:
+Philip Jonathan is a statistical modeller, Chair of Environmental Statistics and Data Science in the School of Mathematical Sciences at Lancaster University, UK on a part-time basis. His current research is reported at www.lancs.ac.uk/$\sim$jonathan. He has more than 35 years experience in statistical modelling of physical systems, particularly the ocean environment, and a background in applied mathematics and physics. He is particularly interested in characterising extreme ocean environments, and the development of methodology for good design and re-analysis of offshore and coastal infrastructure. He has published on the development of methods for large-scale non-stationary marginal extreme value modelling with multidimensional covariates, and non-stationary extensions of multivariate, spatial and time-series extreme value methods, and applied these widely. He has developed and refined estimators summarising the tails of distributions, including return values, associated values and environmental design contours in the presence of uncertainty. His long-standing interests include Bayesian uncertainty analysis for complex systems, Bayesian inference for optimal design and probabilistic inversion in remote sensing, multivariate prediction and computational statistics generally. He has also published on ion physics, chemical kinetics, multivariate analysis, manufacturing process optimisation, chemometrics and quantitative structure--activity relationships, single pixel cameras, wave radar measurement, time-series and change-point analysis, volcanology and ancient writing systems. Illustrative references include:
 
 \setlength{\parskip}{0.2em}
 
