--- a/CurriculumVitae/PhilipJonathanCV.tex
+++ b/CurriculumVitae/PhilipJonathanCV.tex
@@ -136,7 +136,7 @@ Since 2024 I have undertaken a limited amount of consultancy work.
 Publications are sorted first by year (in reverse), then by author and finally if necessary by title. 
 \vspace{5pt}
 
-2025: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Submitted to Ocean Engineering in December 2024, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2501.11650.
+2025: C. Leach, K. Ewans and \textbf{P. Jonathan}. Changes over time in the 100-year return value of climate model variables. (Accepted by Ocean Engineering in February 2025, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2501.11650.
 
 2025: E. Mackay, C. J. R. Murphy-Barltrop, J. Richards and \textbf{P. Jonathan}. Deep learning joint extremes of metocean variables using the SPAR model. (Preprint to be submitted to the 2025 OMAE conference, preprint at www.lancs.ac.uk/$\sim$jonathan.) arXiv:2412.15808.
 
